src/libqgraphicsview.bf

	[LinkName("QGraphicsView_MousePressEvent")]
	public static extern void QGraphicsView_MousePressEvent(void* c_this, QMouseEvent event);
	[LinkName("QGraphicsView_MouseMoveEvent")]
	public static extern void QGraphicsView_MouseMoveEvent(void* c_this, QMouseEvent event);
	[LinkName("QGraphicsView_MouseReleaseEvent")]
	public static extern void QGraphicsView_MouseReleaseEvent(void* c_this, QMouseEvent event);
	[LinkName("QGraphicsView_WheelEvent")]
	public static extern void QGraphicsView_WheelEvent(void* c_this, QWheelEvent event);
	[LinkName("QGraphicsView_PaintEvent")]
	public static extern void QGraphicsView_PaintEvent(void* c_this, QPaintEvent event);
	[LinkName("QGraphicsView_ResizeEvent")]
	public static extern void QGraphicsView_ResizeEvent(void* c_this, QResizeEvent event);
	[LinkName("QGraphicsView_ScrollContentsBy")]
	public static extern void QGraphicsView_ScrollContentsBy(void* c_this, int32 dx, int32 dy);
	[LinkName("QGraphicsView_ShowEvent")]
	public static extern void QGraphicsView_ShowEvent(void* c_this, QShowEvent event);
	[LinkName("QGraphicsView_InputMethodEvent")]
	public static extern void QGraphicsView_InputMethodEvent(void* c_this, QInputMethodEvent event);
	[LinkName("QGraphicsView_DrawBackground")]
	public static extern void QGraphicsView_DrawBackground(void* c_this, QPainter painter, QRectF rect);
	[LinkName("QGraphicsView_DrawForeground")]
	public static extern void QGraphicsView_DrawForeground(void* c_this, QPainter painter, QRectF rect);
	[LinkName("QGraphicsView_Tr2")]
	public static extern char8[] QGraphicsView_Tr2(char8[] s, char8[] c);
	[LinkName("QGraphicsView_Tr3")]
	public static extern char8[] QGraphicsView_Tr3(char8[] s, char8[] c, int32 n);
	[LinkName("QGraphicsView_SetRenderHint2")]
	public static extern void QGraphicsView_SetRenderHint2(void* c_this, int64 hint, bool enabled);
	[LinkName("QGraphicsView_SetOptimizationFlag2")]
	public static extern void QGraphicsView_SetOptimizationFlag2(void* c_this, int64 flag, bool enabled);
	[LinkName("QGraphicsView_SetTransform2")]
	public static extern void QGraphicsView_SetTransform2(void* c_this, QTransform matrix, bool combine);
	[LinkName("QGraphicsView_EnsureVisible22")]
	public static extern void QGraphicsView_EnsureVisible22(void* c_this, QRectF rect, int32 xmargin);
	[LinkName("QGraphicsView_EnsureVisible3")]
	public static extern void QGraphicsView_EnsureVisible3(void* c_this, QRectF rect, int32 xmargin, int32 ymargin);
	[LinkName("QGraphicsView_EnsureVisible5")]
	public static extern void QGraphicsView_EnsureVisible5(void* c_this, double x, double y, double w, double h, int32 xmargin);
	[LinkName("QGraphicsView_EnsureVisible6")]
	public static extern void QGraphicsView_EnsureVisible6(void* c_this, double x, double y, double w, double h, int32 xmargin, int32 ymargin);
	[LinkName("QGraphicsView_EnsureVisible23")]
	public static extern void QGraphicsView_EnsureVisible23(void* c_this, QGraphicsItem item, int32 xmargin);
	[LinkName("QGraphicsView_EnsureVisible32")]
	public static extern void QGraphicsView_EnsureVisible32(void* c_this, QGraphicsItem item, int32 xmargin, int32 ymargin);
	[LinkName("QGraphicsView_FitInView22")]
	public static extern void QGraphicsView_FitInView22(void* c_this, QRectF rect, int64 aspectRadioMode);
	[LinkName("QGraphicsView_FitInView5")]
	public static extern void QGraphicsView_FitInView5(void* c_this, double x, double y, double w, double h, int64 aspectRadioMode);
	[LinkName("QGraphicsView_FitInView23")]
	public static extern void QGraphicsView_FitInView23(void* c_this, QGraphicsItem item, int64 aspectRadioMode);
	[LinkName("QGraphicsView_Render2")]
	public static extern void QGraphicsView_Render2(void* c_this, QPainter painter, QRectF target);
	[LinkName("QGraphicsView_Render3")]
	public static extern void QGraphicsView_Render3(void* c_this, QPainter painter, QRectF target, QRect source);
	[LinkName("QGraphicsView_Render4")]
	public static extern void QGraphicsView_Render4(void* c_this, QPainter painter, QRectF target, QRect source, int64 aspectRatioMode);
	[LinkName("QGraphicsView_Items22")]
	public static extern QGraphicsItem[] QGraphicsView_Items22(void* c_this, QRect rect, int64 mode);
	[LinkName("QGraphicsView_Items5")]
	public static extern QGraphicsItem[] QGraphicsView_Items5(void* c_this, int32 x, int32 y, int32 w, int32 h, int64 mode);
	[LinkName("QGraphicsView_Items24")]
	public static extern QGraphicsItem[] QGraphicsView_Items24(void* c_this, QPainterPath path, int64 mode);
	[LinkName("QGraphicsView_InvalidateScene1")]
	public static extern void QGraphicsView_InvalidateScene1(void* c_this, QRectF rect);
	[LinkName("QGraphicsView_InvalidateScene2")]
	public static extern void QGraphicsView_InvalidateScene2(void* c_this, QRectF rect, int64 layers);
}